--- a/workspace/board/src/main/resources/templates/board/edit.html
+++ b/workspace/board/src/main/resources/templates/board/edit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>호근커뮤니티 - 게시글 작성</title>
+    <title>호근커뮤니티 - 게시글 수정</title>
     <link rel="stylesheet" th:href="@{/css/layout.css}">
     <link rel="stylesheet" th:href="@{/css/write.css}">
 </head>
@@ -19,7 +19,17 @@
     <div class="mb-3">
         <a th:href="@{/board/list}" class="btn-secondary">목록 보기</a>
     </div>
-    <form method="post" id="myForm" th:action="@{/board/write}" enctype="multipart/form-data" th:object="${board}">
+    <form method="post" id="myForm" th:action="@{/board/edit}" enctype="multipart/form-data" th:object="${board}">
+        <div class="mb-3">
+            <label for="boardId" class="form-label">번호</label>
+            <input type="text" class="form-control" id="boardId" th:field="*{boardId}"
+                   placeholder="Title">
+        </div>
+        <div class="mb-3">
+            <label for="name" class="form-label">작성자</label>
+            <input type="text" class="form-control" id="name" th:field="*{name}"
+                   placeholder="Title">
+        </div>
         <div class="mb-3">
             <label for="boardTitle" class="form-label">제목</label>
             <input type="text" class="form-control" id="boardTitle" th:field="*{boardTitle}"
@@ -37,12 +47,7 @@
         <div class="d-grid">
             <button type="submit" class="btn">등록</button>
         </div>
-        <!--    작성자 정보를 가지고 오는 첫번째 방법    -->
-        <!--    로그인이 되어있어야지만 글 작성이 가능.    -->
-        <!--    DTO 담아서 넘기지 말고 따로 넘기자.    -->
 
-<!--        지금 모델에 담아서 넘겨주는게 아니라서 name을 적어줘야함-->
-       <input type="hidden" th:value="${#authentication.getPrincipal().getProviderId()}" name="providerId">
     </form>
 </div>
 
