6월 24일 첨부파일 다운로드 구현

--- a/workspace/board/src/main/resources/templates/board/detail.html
+++ b/workspace/board/src/main/resources/templates/board/detail.html
@@ -63,7 +63,7 @@
                 <div class="uploadResult">
                     <ul>
                         <li th:each="file:${files}" th:object="${file}">
-                            <a href="#" th:text="*{originalFileName}">첨부파일1</a>
+                            <a th:href="@{/download/{fileId}(fileId=${file.fileId})}" th:text="*{originalFileName}">첨부파일1</a>
                             <span th:text="*{fileSize + ' KB'}">49KB</span>
                         </li>
                     </ul>
