--- a/workspace/board/src/main/resources/templates/layout/header.html
+++ b/workspace/board/src/main/resources/templates/layout/header.html
@@ -10,7 +10,7 @@
     <div class="header">
         <div class="logo">게시판</div>
         <div class="user" sec:authorize="isAuthenticated()">
-            <div class="user-info" >
+            <div class="user-info">
                 <span th:text="${#authentication.getPrincipal().getName()}" class="user-name"></span>
                 <img th:src="${#authentication.getPrincipal().getProfilePic()}" alt="Profile Image" class="profile-pic"/>
             </div>
@@ -21,7 +21,7 @@
         <a th:href="@{/board/list}">게시판 목록</a>
         <a th:href="@{/board/rest}">정렬 및 검색</a>
         <div sec:authorize="!isAuthenticated()">
-            <a href="/oauth2/authorization/kakao">로그인</a>
+            <a th:href="@{/board/login}">로그인</a>
         </div>
         <div sec:authorize="isAuthenticated()">
             <a href="/logout">로그아웃</a>
